--- a/bank-post-predict-analysis.ipynb
+++ b/bank-post-predict-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_file = \"predictions/2018-08-10/predictions/part-00000-4bef2762-a8d6-4044-8175-e01bf8b372ed-c000.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_output = spark.read.csv(\n",
-    "    \"hdfs://elephant:8020/user/labdata/predictions/2018-08-09/predictions/part-00000-ab65832c-2463-4ecc-bf77-a46ade62715f-c000.csv\",\n",
+    "    \"hdfs://elephant:8020/user/labdata/\" + prediction_file,\n",
     "    header=False,\n",
     "    sep=\",\",\n",
     "    inferSchema=True\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +85,8 @@
       "+----------+-----+---------------+\n",
       "|prediction|count|convertion_rate|\n",
       "+----------+-----+---------------+\n",
-      "|        no| 6876|         0.0558|\n",
-      "|       yes| 1361|         0.3990|\n",
+      "|        no| 6896|         0.0566|\n",
+      "|       yes| 1342|         0.4001|\n",
       "+----------+-----+---------------+\n",
       "\n"
      ]
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +145,8 @@
      "output_type": "stream",
      "text": [
       "Taxa de Conversão Esperada:\n",
-      "\tSem Modelo: 10.78%\n",
-      "\tCom Modelo: 56.60%\n"
+      "\tSem Modelo: 11.18%\n",
+      "\tCom Modelo: 55.00%\n"
      ]
     }
    ],
@@ -150,6 +159,72 @@
    "metadata": {},
    "source": [
     "Um aumento significativo em efetividade!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ". Em outro cenário, ligaríamos para todos os números disponíveis. Como muda o CAC ao ligar apenas para os recomendados pelo modelo?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# custo de cada ligação: R$ 17\n",
+    "call_cost = 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convertion_full = model_output.groupBy('label').count()\n",
+    "convertion_full = {int(r['label']): r['count'] for r in convertion_full.collect()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convertion_model = model_output.filter(model_output['prediction'] == 1).groupBy('label').count()\n",
+    "convertion_model = {int(r['label']): r['count'] for r in convertion_model.collect()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cac_full = (convertion_full[0] + convertion_full[1])*call_cost / convertion_full[1]\n",
+    "cac_model = (convertion_model[0] + convertion_model[1])*call_cost / convertion_model[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CAC esperado:\n",
+      "\tSem Modelo: R$ 151.07\n",
+      "\tCom Modelo: R$  42.48\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"CAC esperado:\\n\\tSem Modelo: R${cac_full:7.2f}\\n\\tCom Modelo: R${cac_model:7.2f}\")"
    ]
   }
  ],
