--- a/bank-model-final.ipynb
+++ b/bank-model-final.ipynb
@@ -348,8 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 85.7 ms, sys: 20.4 ms, total: 106 ms\n",
-      "Wall time: 1min 4s\n"
+      "CPU times: user 76.2 ms, sys: 0 ns, total: 76.2 ms\n",
+      "Wall time: 57.2 s\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
       "+---+-----+\n",
       "|  y|count|\n",
       "+---+-----+\n",
-      "| no| 5884|\n",
+      "| no| 5886|\n",
       "|yes| 3713|\n",
       "+---+-----+\n",
       "\n"
@@ -476,20 +476,20 @@
     }
    ],
    "source": [
-    "data_res = data.sampleBy('y', fractions={'yes': 1, 'no': 0.2})\n",
+    "data_res = data.sampleBy('y', fractions={'yes': 1, 'no': 0.2}, seed=420)\n",
     "data_res.groupBy('y').count().show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observações para treino:    7684\n",
+      "Observações para treino:    7686\n",
       "Observações para teste:     1913\n"
      ]
     }
@@ -503,15 +503,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 85.8 ms, sys: 20.3 ms, total: 106 ms\n",
-      "Wall time: 40.8 s\n"
+      "CPU times: user 64 ms, sys: 0 ns, total: 64 ms\n",
+      "Wall time: 26.3 s\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -545,16 +545,16 @@
       "+---------+-----+--------------------+----------+\n",
       "|client_id|label|         probability|prediction|\n",
       "+---------+-----+--------------------+----------+\n",
-      "|    99E3E|  1.0|[0.26822972896096...|       1.0|\n",
-      "|    LYE2O|  1.0|[0.10345855935561...|       1.0|\n",
-      "|    HWDG5|  0.0|[0.23828302553751...|       1.0|\n",
-      "|    458Y0|  1.0|[0.09527461398786...|       1.0|\n",
-      "|    ZMB0S|  0.0|[0.21945796379139...|       1.0|\n",
-      "|    KW4K4|  1.0|[0.47716439150218...|       1.0|\n",
-      "|    G5PES|  0.0|[0.47716439150218...|       1.0|\n",
-      "|    QVAU3|  1.0|[0.55234617784506...|       0.0|\n",
-      "|    EC5H0|  1.0|[0.47716439150218...|       1.0|\n",
-      "|    PMII3|  1.0|[0.43866316142809...|       1.0|\n",
+      "|    99E3E|  1.0|[0.15967127685075...|       1.0|\n",
+      "|    55UK3|  1.0|[0.11209598280032...|       1.0|\n",
+      "|    M7AJH|  1.0|[0.10728508532343...|       1.0|\n",
+      "|    3M8VA|  1.0|[0.63161893547033...|       0.0|\n",
+      "|    4621G|  0.0|[0.75710971442414...|       0.0|\n",
+      "|    QVAU3|  1.0|[0.90527359235893...|       0.0|\n",
+      "|    350UZ|  0.0|[0.71177995924388...|       0.0|\n",
+      "|    3SIFF|  1.0|[0.26985526483253...|       1.0|\n",
+      "|    28JND|  1.0|[0.41451071872129...|       1.0|\n",
+      "|    MQL5O|  0.0|[0.63226260473842...|       0.0|\n",
       "+---------+-----+--------------------+----------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -576,7 +576,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:         0.7799\n",
+      "Accuracy:         0.7669\n",
       "areaUnderROC:     0.7881\n"
      ]
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
       "+--------+---------+------+\n",
       "|accuracy|precision|recall|\n",
       "+--------+---------+------+\n",
-      "|  0.7799|   0.7856|0.6074|\n",
+      "|  0.7669|   0.7786|0.5806|\n",
       "+--------+---------+------+\n",
       "\n"
      ]
